# feishu_agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: AddDoc.py  Agents.py  Emotion.py  FeishuWebHook.py  Memory.py  Prompt.py  Server.py  Storage.py  Tools.py  __init__.py
